# the_board

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  WELCOME.md  dataModel.py  dev.sh  example.env  list_tree.py  main.py  pyproject.toml  start.sh  test_core_functionality.py  validate_system.py
.github/: copilot-instructions.md
docs/: BRAND_GUIDELINES.md  CONSOLIDATION_COMPLETE.md  DEPLOYMENT.md  MIGRATION_SUMMARY.md  ORCHESTRATION_COMPLETE.md  ORCHESTRATION_IMPLEMENTATION_COMPLETE.md  RAG_INTEGRATION_COMPLETE.md  TECHSPEC.md  TODO.md  To-do.md  WORKFLOWS.md  file_structure.txt
scripts/: dev.py  smoke.ps1  start.py  ui.py
src/: main.py
src/agents/: __init__.py  specialists.py  tools.py
src/api/: state_routes.py
src/knowledge/: __init__.py  ingest.py  retriever.py
src/llm/: __init__.py  ollama_client.py
src/models/: README.md  __init__.py  dataModel.py  test_odyssey.py
src/models/odyssey/: __init__.py  constraints.py  context.py  core.py  decision_log.py  enums.py  factory.py  metrics.py
src/orchestration/: __init__.py  runner.py  synthesizer.py
src/state/: store.py
src/ui/: __init__.py  st_rerun_shim.py  streamlit_app.py
tests/: README.md  __init__.py  run_tests.py  test_agent_tools.py  test_api.py  test_models.py  test_state_store.py
